defconfig: `merged sun7i and 8i and renamed sun50i to sunxi64`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/sunxi_defconfig
+++ b/defconfig/sunxi_defconfig
@@ -345,14 +345,29 @@ CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
+CONFIG_SUN50I_DE2_BUS=y
 CONFIG_CONNECTOR=y
+CONFIG_ARM_SCMI_PROTOCOL=y
+CONFIG_ARM_SCPI_PROTOCOL=m
 CONFIG_SYSFB_SIMPLEFB=y
 CONFIG_EFI_BOOTLOADER_CONTROL=y
 CONFIG_RESET_ATTACK_MITIGATION=y
 CONFIG_GNSS=y
 CONFIG_GNSS_SIRF_SERIAL=m
 CONFIG_GNSS_UBX_SERIAL=m
+CONFIG_MTD=y
+CONFIG_MTD_CMDLINE_PARTS=m
+CONFIG_MTD_SWAP=m
+CONFIG_MTD_PARTITIONED_MASTER=y
+CONFIG_MTD_ONENAND=m
+CONFIG_MTD_RAW_NAND=m
+CONFIG_MTD_NAND_SUNXI=m
+CONFIG_MTD_NAND_PLATFORM=m
+CONFIG_MTD_SPI_NAND=m
+CONFIG_MTD_SPI_NOR=m
+CONFIG_MTD_UBI=m
 CONFIG_OF_OVERLAY=y
+CONFIG_BLK_DEV_PCIESSD_MTIP32XX=m
 CONFIG_ZRAM=m
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
@@ -360,6 +375,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NBD=m
 CONFIG_NVME_TARGET=m
 CONFIG_ENCLOSURE_SERVICES=m
+CONFIG_SRAM=y
 CONFIG_MISC_RTSX_PCI=m
 CONFIG_MISC_RTSX_USB=m
 CONFIG_BLK_DEV_SD=y
@@ -385,6 +401,17 @@ CONFIG_DM_INTEGRITY=y
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=m
 CONFIG_WIREGUARD=y
+CONFIG_NET_TEAM=m
+CONFIG_NET_TEAM_MODE_BROADCAST=m
+CONFIG_NET_TEAM_MODE_ROUNDROBIN=m
+CONFIG_NET_TEAM_MODE_RANDOM=m
+CONFIG_NET_TEAM_MODE_ACTIVEBACKUP=m
+CONFIG_NET_TEAM_MODE_LOADBALANCE=m
+CONFIG_MACVLAN=m
+CONFIG_MACVTAP=m
+CONFIG_IPVLAN=m
+CONFIG_IPVTAP=m
+CONFIG_MACSEC=m
 CONFIG_TUN=y
 CONFIG_VETH=y
 # CONFIG_NET_VENDOR_3COM is not set
@@ -546,6 +573,7 @@ CONFIG_INPUT_MISC=y
 CONFIG_INPUT_GPIO_VIBRA=y
 CONFIG_INPUT_AXP20X_PEK=y
 CONFIG_SERIO=m
+CONFIG_USERIO=m
 CONFIG_SERIO_RAW=m
 CONFIG_SERIO_SUN4I_PS2=m
 # CONFIG_LEGACY_PTYS is not set
@@ -555,10 +583,16 @@ CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_SERIAL_8250_NR_UARTS=8
 CONFIG_SERIAL_8250_RUNTIME_UARTS=8
 CONFIG_SERIAL_8250_EXTENDED=y
+CONFIG_SERIAL_8250_MANY_PORTS=y
 CONFIG_SERIAL_8250_SHARE_IRQ=y
 CONFIG_SERIAL_8250_DW=y
 CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_SERIAL_EARLYCON_ARM_SEMIHOST=y
+CONFIG_SERIAL_NONSTANDARD=y
+CONFIG_MOXA_INTELLIO=m
+CONFIG_MOXA_SMARTIO=m
+CONFIG_SYNCLINK_GT=m
+CONFIG_N_HDLC=m
 CONFIG_SERIAL_DEV_BUS=y
 CONFIG_HW_RANDOM=y
 CONFIG_I2C_CHARDEV=y
@@ -591,10 +625,13 @@ CONFIG_GPIO_PISOSR=m
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
+CONFIG_POWER_RESET_REGULATOR=y
+CONFIG_POWER_RESET_SYSCON_POWEROFF=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_CHARGER_AXP20X=y
 CONFIG_BATTERY_AXP20X=y
 CONFIG_AXP20X_POWER=y
+CONFIG_SENSORS_DRIVETEMP=m
 CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_PWM_FAN=m
 CONFIG_THERMAL=y
@@ -603,10 +640,15 @@ CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
+CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
+CONFIG_DEVFREQ_THERMAL=y
+CONFIG_THERMAL_MMIO=m
 CONFIG_SUN8I_THERMAL=y
+CONFIG_GENERIC_ADC_THERMAL=m
 CONFIG_WATCHDOG=y
 CONFIG_SOFT_WATCHDOG=m
+CONFIG_GPIO_WATCHDOG=m
 CONFIG_SUNXI_WATCHDOG=y
 CONFIG_MFD_SUN4I_GPADC=y
 CONFIG_MFD_AXP20X_I2C=y
@@ -952,6 +994,7 @@ CONFIG_FB_TFT_UPD161704=m
 CONFIG_COMMON_CLK_AXI_CLKGEN=m
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_SUN6I=m
+CONFIG_SUN6I_MSGBOX=m
 CONFIG_MAILBOX=y
 CONFIG_SUN50I_IOMMU=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
@@ -986,6 +1029,8 @@ CONFIG_ARM_CCI_PMU=y
 # CONFIG_ARM_CCI5xx_PMU is not set
 CONFIG_NVMEM_RMEM=m
 CONFIG_NVMEM_SUNXI_SID=y
+CONFIG_TEE=m
+CONFIG_OPTEE=m
 CONFIG_MUX_ADG792A=m
 CONFIG_MUX_ADGS1408=m
 CONFIG_MUX_GPIO=m
