lib: function: config: `maintenance`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/function/config
+++ b/lib/function/config
@@ -31,7 +31,7 @@ EOF
 
 kernel_txt (){
 cat <<EOF > "kernel.txt"
-### ADVANCED KERNEL OPTIONS
+### ADVANCED KERNEL PREFERENCES
 
 # Kernel dot org
 #GIT_KERNELORG="false"
