--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -34,7 +34,7 @@ NETWORKMANAGER="1"
 RTW88="1"
 RTL88XXAU="1"
 USERACCT="0"
-USER_PKGS="htop libsensors-dev"
+USER_PKGS="htop libsensors-dev rsyslog"
 LOCALE="en_US.UTF-8"
 LOCALE_LC_ALL="C.UTF-8"
 TIMEZONE="America/New_York"
