lib: function: config: `defaults and clean up`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/function/config
+++ b/lib/function/config
@@ -1,24 +1,25 @@
 #!/bin/bash
 
-# customize your image
 custom_txt (){
 cat <<EOF > "custom.txt"
-# Boot Partition: true false
+### CUSTOMIZE IMAGE
+
+# Boot Partition
 ENABLE_VFAT="false"
 
 # Root Filesystem Types: ext4 btrfs xfs
 FSTYPE="ext4"
 
-# UEFI Options: true false
+# UEFI Options
 ENABLE_EFI="false"
 
-# Petitboot (ODROID): true false
+# Petitboot (ODROID)
 ENABLE_PETITBOOT="false"
 
 # Image Size: 3072MB 3584MB 4096MB
 IMGSIZE="4096MB"
 
-# Shrink Image (EXT4 Only): true false
+# Shrink Image (EXT4 Only)
 ENABLE_SHRINK="true"
 
 # Compression Types: xz zst
@@ -34,7 +35,7 @@ cat <<EOF > "kernel.txt"
 ### ADVANCED KERNEL PREFERENCES
 
 # Kernel dot org
-#GIT_KERNELORG="false"
+GIT_KERNELORG="true"
 #LINUX_PATCHING="false"
 
 # Github / Gitlab
@@ -56,7 +57,8 @@ sed -i "s/^#GIT_PATCHDIR=.*/#GIT_PATCHDIR="'"patches\/git\/${BOARD}\/${GIT_REPO}
 
 profile_txt (){
 cat <<EOF > "profile.txt"
-# User data defaults
+### USER DEFAULTS
+
 #NAME="$MYNAME"
 #USERNAME="$USER"
 #PASSWORD="board"
