defconfig: `sunxi64_defconfig` `sunxi_defconfig`
CONFIG_CFG80211=m
CONFIG_MAC80211=m
CONFIG_MAC80211_LEDS=y
CONFIG_RFKILL=m
CONFIG_RFKILL_INPUT=y
CONFIG_RFKILL_GPIO=m

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/sunxi_defconfig
+++ b/defconfig/sunxi_defconfig
@@ -296,12 +296,11 @@ CONFIG_BT_HCIBCM203X=m
 CONFIG_BT_MTKSDIO=m
 CONFIG_BT_MTKUART=m
 CONFIG_CFG80211=m
-CONFIG_CFG80211_DEBUGFS=y
 CONFIG_MAC80211=m
 CONFIG_MAC80211_LEDS=y
-CONFIG_RFKILL=y
+CONFIG_RFKILL=m
 CONFIG_RFKILL_INPUT=y
-CONFIG_RFKILL_GPIO=y
+CONFIG_RFKILL_GPIO=m
 CONFIG_CAIF=m
 CONFIG_CEPH_LIB=m
 CONFIG_CEPH_LIB_USE_DNS_RESOLVER=y
