--- a/defconfig/sunxi64_defconfig
+++ b/defconfig/sunxi64_defconfig
@@ -275,12 +275,12 @@ CONFIG_BT_HCIUART_RTL=y
 CONFIG_BT_HCIBCM203X=m
 CONFIG_BT_HCIBPA10X=m
 CONFIG_AF_KCM=m
-CONFIG_CFG80211=y
+CONFIG_CFG80211=m
 CONFIG_MAC80211=m
-CONFIG_MAC80211_MESH=y
 CONFIG_MAC80211_LEDS=y
-CONFIG_RFKILL=y
-CONFIG_RFKILL_GPIO=y
+CONFIG_RFKILL=m
+CONFIG_RFKILL_INPUT=y
+CONFIG_RFKILL_GPIO=m
 CONFIG_CAIF=m
 CONFIG_CAIF_USB=m
 CONFIG_CEPH_LIB=m
