--- a/defconfig/sunxi64_defconfig
+++ b/defconfig/sunxi64_defconfig
@@ -257,7 +257,7 @@ CONFIG_YAM=m
 CONFIG_CAN=m
 CONFIG_CAN_J1939=m
 CONFIG_CAN_ISOTP=m
-CONFIG_BT=y
+CONFIG_BT=m
 CONFIG_BT_RFCOMM=m
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=m
@@ -358,6 +358,7 @@ CONFIG_SRAM=y
 CONFIG_DW_XDATA_PCIE=m
 CONFIG_MISC_RTSX_PCI=m
 CONFIG_MISC_RTSX_USB=m
+CONFIG_SUNXI_ADDR_MGT=m
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_ST=m
 CONFIG_BLK_DEV_SR=m
@@ -380,11 +381,11 @@ CONFIG_ATA_GENERIC=m
 CONFIG_MD=y
 CONFIG_BCACHE=m
 CONFIG_BCACHE_ASYNC_REGISTRATION=y
-CONFIG_BLK_DEV_DM=y
-CONFIG_DM_CRYPT=y
+CONFIG_BLK_DEV_DM=m
+CONFIG_DM_CRYPT=m
 CONFIG_DM_THIN_PROVISIONING=m
 CONFIG_DM_INIT=y
-CONFIG_DM_INTEGRITY=y
+CONFIG_DM_INTEGRITY=m
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=m
 CONFIG_WIREGUARD=y
@@ -604,11 +605,29 @@ CONFIG_SPI_SUN4I=y
 CONFIG_SPI_SUN6I=y
 CONFIG_SPI_MUX=m
 CONFIG_SPI_SPIDEV=y
+CONFIG_PINCTRL_AS3722=m
 CONFIG_PINCTRL_AXP209=y
+CONFIG_PINCTRL_CY8C95X0=m
+CONFIG_PINCTRL_MCP23S08=m
+CONFIG_PINCTRL_MICROCHIP_SGPIO=m
+CONFIG_PINCTRL_OCELOT=m
 CONFIG_PINCTRL_SINGLE=y
+CONFIG_PINCTRL_STMFX=m
+CONFIG_PINCTRL_SX150X=y
+CONFIG_PINCTRL_SUN4I_A10=y
+CONFIG_PINCTRL_SUN5I=y
+CONFIG_PINCTRL_SUN6I_A31=y
+CONFIG_PINCTRL_SUN6I_A31_R=y
+CONFIG_PINCTRL_SUN8I_A23=y
+CONFIG_PINCTRL_SUN8I_A33=y
+CONFIG_PINCTRL_SUN8I_A83T=y
+CONFIG_PINCTRL_SUN8I_A83T_R=y
+CONFIG_PINCTRL_SUN8I_A23_R=y
+CONFIG_PINCTRL_SUN8I_H3=y
 CONFIG_PINCTRL_SUN8I_V3S=y
 CONFIG_PINCTRL_SUN9I_A80=y
 CONFIG_PINCTRL_SUN9I_A80_R=y
+CONFIG_PINCTRL_SUN20I_D1=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_DWAPB=m
 CONFIG_GPIO_GENERIC_PLATFORM=m
@@ -1032,6 +1051,9 @@ CONFIG_LEDS_TRIGGER_NETDEV=y
 CONFIG_LEDS_TRIGGER_PATTERN=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_INTF_PROC is not set
+CONFIG_RTC_DRV_ABB5ZES3=m
+CONFIG_RTC_DRV_ABEOZ9=m
+CONFIG_RTC_DRV_ABX80X=m
 CONFIG_RTC_DRV_AC100=m
 CONFIG_RTC_DRV_AS3722=m
 CONFIG_RTC_DRV_DS1307=m
@@ -1040,14 +1062,43 @@ CONFIG_RTC_DRV_DS1374=m
 CONFIG_RTC_DRV_DS1374_WDT=y
 CONFIG_RTC_DRV_DS1672=m
 CONFIG_RTC_DRV_HYM8563=m
+CONFIG_RTC_DRV_MAX6900=m
+CONFIG_RTC_DRV_NCT3018Y=m
+CONFIG_RTC_DRV_RS5C372=m
+CONFIG_RTC_DRV_ISL1208=m
+CONFIG_RTC_DRV_ISL12022=m
+CONFIG_RTC_DRV_ISL12026=m
+CONFIG_RTC_DRV_X1205=m
 CONFIG_RTC_DRV_PCF8523=m
 CONFIG_RTC_DRV_PCF85063=m
 CONFIG_RTC_DRV_PCF85363=m
+CONFIG_RTC_DRV_PCF8563=m
+CONFIG_RTC_DRV_PCF8583=m
+CONFIG_RTC_DRV_M41T80=m
+CONFIG_RTC_DRV_M41T80_WDT=y
+CONFIG_RTC_DRV_BQ32K=m
+CONFIG_RTC_DRV_S35390A=m
+CONFIG_RTC_DRV_FM3130=m
+CONFIG_RTC_DRV_RX8010=m
+CONFIG_RTC_DRV_RX8581=m
+CONFIG_RTC_DRV_RX8025=m
+CONFIG_RTC_DRV_EM3027=m
+CONFIG_RTC_DRV_RV3028=m
+CONFIG_RTC_DRV_RV3032=m
+CONFIG_RTC_DRV_RV8803=m
+CONFIG_RTC_DRV_SD3078=m
+CONFIG_RTC_DRV_M41T93=m
+CONFIG_RTC_DRV_M41T94=m
 CONFIG_RTC_DRV_DS1302=m
 CONFIG_RTC_DRV_DS1305=m
 CONFIG_RTC_DRV_DS1343=m
 CONFIG_RTC_DRV_DS1347=m
 CONFIG_RTC_DRV_DS1390=m
+CONFIG_RTC_DRV_MAX6916=m
+CONFIG_RTC_DRV_R9701=m
+CONFIG_RTC_DRV_RX4581=m
+CONFIG_RTC_DRV_RS5C348=m
+CONFIG_RTC_DRV_MAX6902=m
 CONFIG_RTC_DRV_PCF2123=m
 CONFIG_RTC_DRV_MCP795=m
 CONFIG_RTC_DRV_DS3232=m
@@ -1060,8 +1111,25 @@ CONFIG_RTC_DRV_DS1553=m
 CONFIG_RTC_DRV_DS1685_FAMILY=m
 CONFIG_RTC_DRV_DS1742=m
 CONFIG_RTC_DRV_DS2404=m
+CONFIG_RTC_DRV_EFI=m
+CONFIG_RTC_DRV_STK17TA8=m
+CONFIG_RTC_DRV_M48T86=m
+CONFIG_RTC_DRV_M48T35=m
+CONFIG_RTC_DRV_M48T59=m
+CONFIG_RTC_DRV_MSM6242=m
+CONFIG_RTC_DRV_BQ4802=m
+CONFIG_RTC_DRV_RP5C01=m
+CONFIG_RTC_DRV_V3020=m
 CONFIG_RTC_DRV_PCF50633=m
+CONFIG_RTC_DRV_OPTEE=m
+CONFIG_RTC_DRV_ZYNQMP=m
+CONFIG_RTC_DRV_PL030=m
+CONFIG_RTC_DRV_PL031=m
 CONFIG_RTC_DRV_SUN6I=y
+CONFIG_RTC_DRV_CADENCE=m
+CONFIG_RTC_DRV_FTRTC010=m
+CONFIG_RTC_DRV_R7301=m
+CONFIG_RTC_DRV_GOLDFISH=m
 CONFIG_DMADEVICES=y
 CONFIG_DMA_SUN6I=y
 CONFIG_DMABUF_HEAPS=y
@@ -1120,6 +1188,9 @@ CONFIG_HWSPINLOCK_SUN6I=m
 # CONFIG_HISILICON_ERRATUM_161010101 is not set
 CONFIG_MAILBOX=y
 CONFIG_SUN50I_IOMMU=y
+CONFIG_ARM_SMMU=m
+CONFIG_ARM_SMMU_V3=m
+CONFIG_ARM_SMMU_V3_SVA=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
