defconfig: `CONFIG_AUTOFS_FS=y`
linux 6.6.y and up

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/meson8b_defconfig
+++ b/defconfig/meson8b_defconfig
@@ -2493,6 +2493,7 @@ CONFIG_BTRFS_FS_CHECK_INTEGRITY=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_QUOTA=y
 CONFIG_AUTOFS4_FS=y
+CONFIG_AUTOFS_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_CUSE=m
 CONFIG_OVERLAY_FS=y
