--- a/defconfig/odroid_defconfig
+++ b/defconfig/odroid_defconfig
@@ -1265,6 +1265,7 @@ CONFIG_F2FS_FS=y
 CONFIG_F2FS_CHECK_FS=y
 CONFIG_FANOTIFY=y
 CONFIG_AUTOFS4_FS=y
+CONFIG_AUTOFS_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_OVERLAY_FS=y
 CONFIG_NETFS_STATS=y
