--- a/defconfig/orangepi-5_defconfig
+++ b/defconfig/orangepi-5_defconfig
@@ -1469,6 +1469,7 @@ CONFIG_QUOTA_DEBUG=y
 CONFIG_QFMT_V1=m
 CONFIG_QFMT_V2=m
 CONFIG_AUTOFS4_FS=y
+CONFIG_AUTOFS_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_CUSE=m
 CONFIG_OVERLAY_FS=m
