--- a/lib/function/config
+++ b/lib/function/config
@@ -16,11 +16,11 @@ ENABLE_EFI="false"
 # Petitboot (ODROID)
 ENABLE_PETITBOOT="false"
 
-# Image Size: 3072MB 3584MB 4096MB
+# Image Size: 3584MB 4096MB
 IMGSIZE="4096MB"
 
-# Shrink Image (EXT4 Only)
-ENABLE_SHRINK="true"
+# Shrink Image
+ENABLE_SHRINK="false"
 
 # Compression Types: xz zst
 IMG_COMPRESSION="xz"
