--- a/lib/function/config
+++ b/lib/function/config
@@ -20,7 +20,7 @@ ENABLE_PETITBOOT="false"
 IMGSIZE="4096MB"
 
 # Shrink Image
-ENABLE_SHRINK="false"
+ENABLE_SHRINK="true"
 
 # Compression Types: xz zst
 IMG_COMPRESSION="xz"
