--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -22,6 +22,7 @@ LTS3=$(curl -s $URL | grep -A1 longterm: -n1 | egrep -o '>[^<]+' | egrep -o '[^>
 RC=$(curl -s $URL | grep -A1 'mainline:' | grep -oP '(?<=strong>).*(?=</strong.*)')
 STABLE=$(curl -s $URL/releases.json | jq '.latest_stable.version' -r)
 GCC=`ls -ls /usr/bin/gcc | sed 's/.*\(..\)/\1/' | sed 's/ //g'`
+if [[ "$GCC" == "cc" ]]; then GCC="11"; fi
 MYNAME=`echo $USER | sed -e "s/\b\(.\)/\u\1/g"`
 
 # userdata dot txt
