--- a/patches/overlays/arm64/Makefile
+++ b/patches/overlays/arm64/Makefile
@@ -16,6 +16,7 @@ dtbo-$(CONFIG_ARCH_MESON) += \
 	meson-g12a-radxa-zero-uart-ao-b-on-gpioao-8-gpioao-9.dtbo \
 	meson-g12a-radxa-zero-uart-ee-c.dtbo \
 	meson-g12b-bananapi-cm4-gpu.dtbo \
+	meson-g12b-bananapi-cm4-pwm-gpioh-5-fan.dtbo \
 	meson-g12b-bananapi-m2s-rtl8822cs.dtbo \
 	meson-g12b-odroid-n2-canfd0.dtbo \
 	meson-g12b-odroid-n2-i2c0.dtbo \
@@ -26,6 +27,7 @@ dtbo-$(CONFIG_ARCH_MESON) += \
 	meson-g12b-odroid-n2-uart1.dtbo \
 	meson-g12b-waveshare-cm4-io-base-usb.dtbo \
 	meson-g12-gxl-cma-pool-896MB.dtbo \
+	meson-g12-pwm-gpiox-5-fan.dtbo \
 	meson-sm1-bananapi-m5-rtl8822cs.dtbo \
 	meson-sm1-bananapi-uartA.dtbo \
 	meson-sm1-bananapi-uartA_cts_rts.dtbo \
