--- a/patches/overlays/arm64/meson-g12b-bananapi-cm4-pwm-gpioh-5-fan.dts
+++ b/patches/overlays/arm64/meson-g12b-bananapi-cm4-pwm-gpioh-5-fan.dts
@@ -14,7 +14,7 @@
 			fan: gpio-fan {
 				compatible = "gpio-fan";
 				gpios = <&gpio GPIOH_5 GPIO_ACTIVE_HIGH>;
-				gpio-fan,speed-map = <0 0>, <1 1>;
+				gpio-fan,speed-map = <0 0>, <5000 1>;
 				#cooling-cells = <2>;
 			};
 		};
@@ -27,13 +27,13 @@
 			trips {
 				cpu_active: cpu-active {
 					temperature = <55000>;
-					hysteresis = <2000>;
+					hysteresis = <10000>;
 					type = "active";
 				};
 			};
 
 			cooling-maps {
-				map2 {
+				map {
 					trip = <&cpu_active>;
 					cooling-device = <&fan THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
 				};
@@ -47,13 +47,13 @@
 			trips {
 				ddr_active: ddr-active {
 					temperature = <55000>;
-					hysteresis = <2000>;
+					hysteresis = <10000>;
 					type = "active";
 				};
 			};
 
 			cooling-maps {
-				map2 {
+				map {
 					trip = <&ddr_active>;
 					cooling-device = <&fan THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
 				};
