--- a/patches/overlays/arm64/meson-g12-pwm-gpiox-5-fan.dts
+++ b/patches/overlays/arm64/meson-g12-pwm-gpiox-5-fan.dts
@@ -6,7 +6,7 @@
 #include <dt-bindings/thermal/thermal.h>
 
 / {
-	compatible = "amlogic,g12a", "amlogic,g12b", "amlogic,sm1";
+	compatible = "amlogic,a311d", "amlogic,g12a", "amlogic,g12b", "amlogic,sm1";
 
 	fragment@0 {
 		target-path = "/";
