--- a/patches/overlays/arm64/meson-g12b-rpi-cm4-io-rtc-pcf85063a.dts
+++ b/patches/overlays/arm64/meson-g12b-rpi-cm4-io-rtc-pcf85063a.dts
@@ -16,11 +16,20 @@
 	fragment@1 {
 		target = <&i2c1>;
 		__overlay__ {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
 			rtc: rtc@51 {
-				compatible = "nxp,pcf85063";
+				compatible = "nxp,pcf85063a";
 				reg = <0x51>;
 				wakeup-source;
 			};
 		};
 	};
+
+	__overrides__ {
+		rtc = <0>,"+0";
+		addr = <&rtc>, "reg:0";
+	};
 };
+
