--- a/patches/overlays/arm64/Makefile
+++ b/patches/overlays/arm64/Makefile
@@ -1,6 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0
 dtbo-$(CONFIG_ARCH_MESON) += \
-	meson-aml-gpiomem.dtbo \
 	meson-g12a-radxa-zero-gpio-8-led.dtbo \
 	meson-g12a-radxa-zero-gpio-10-led.dtbo \
 	meson-g12a-radxa-zero-i2c-ao-m0-gpioao-2-gpioao-3.dtbo \
@@ -15,6 +14,7 @@ dtbo-$(CONFIG_ARCH_MESON) += \
 	meson-g12a-radxa-zero-uart-ao-b-on-gpioao-2-gpioao-3.dtbo \
 	meson-g12a-radxa-zero-uart-ao-b-on-gpioao-8-gpioao-9.dtbo \
 	meson-g12a-radxa-zero-uart-ee-c.dtbo \
+	meson-g12b-aml-gpiomem.dtbo \
 	meson-g12b-bananapi-cm4-gpu.dtbo \
 	meson-g12b-bananapi-cm4-pwm-gpioh-5-fan.dtbo \
 	meson-g12b-bananapi-m2s-rtl8822cs.dtbo \
@@ -30,6 +30,7 @@ dtbo-$(CONFIG_ARCH_MESON) += \
 	meson-g12-gxl-cma-pool-896MB.dtbo \
 	meson-g12-pwm-gpiox-5-fan.dtbo \
 	meson-gxl-s905x-libretech-cc-i2c-ao.dtbo \
+	meson-sm1-aml-gpiomem.dtbo \
 	meson-sm1-bananapi-m5-rtl8822cs.dtbo \
 	meson-sm1-bananapi-uartA.dtbo \
 	meson-sm1-bananapi-uartA_cts_rts.dtbo \
