--- a/defconfig/sunxi64_defconfig
+++ b/defconfig/sunxi64_defconfig
@@ -974,14 +974,14 @@ CONFIG_USB_MUSB_HDRC=y
 CONFIG_USB_MUSB_SUNXI=y
 CONFIG_MUSB_PIO_ONLY=y
 CONFIG_USB_DWC3=y
-CONFIG_USB_DWC2=m
+CONFIG_USB_DWC2=y
 CONFIG_USB_DWC2_PCI=m
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CH341=y
 CONFIG_USB_SERIAL_CP210X=y
 CONFIG_USB_SERIAL_FTDI_SIO=y
 CONFIG_USB_SERIAL_PL2303=y
-CONFIG_USB_ONBOARD_HUB=m
+CONFIG_USB_ONBOARD_HUB=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GPIO_VBUS=m
 CONFIG_USB_GADGET=y
