patches: allwinner: bananapim4zero: i2c3/4 pg 15 16/17 18
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/patches/overlays/arm64/Makefile
+++ b/patches/overlays/arm64/Makefile
@@ -55,6 +55,8 @@ dtbo-$(CONFIG_ARCH_SUNXI) += \
 	sunxi-h5-i2c1.dtbo \
 	sunxi-h5-i2c2.dtbo \
 	sunxi-h5-mbus-devfreq-driver.dtbo \
+	sunxi-h616-pg-17-18-i2c3.dtbo \
+	sunxi-h616-pg-15-16-i2c4.dtbo \
 	sunxi-usb-host-mode.dtbo \
 	sunxi-usb-otg-mode.dtbo
 
