defconfig: meson64_defconfig: `CONFIG_PANFROST=m`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -1270,7 +1270,7 @@ CONFIG_DRM_DW_HDMI_CEC=y
 CONFIG_DRM_MESON=y
 CONFIG_DRM_GM12U320=m
 CONFIG_DRM_PANEL_MIPI_DBI=m
-CONFIG_DRM_PANFROST=y
+CONFIG_DRM_PANFROST=m
 CONFIG_DRM_GUD=m
 CONFIG_FB=y
 CONFIG_FIRMWARE_EDID=y
