defconfig: meson64_defconfig: `CONFIG_SATA_MOBILE_LPM_POLICY=1`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -528,6 +528,7 @@ CONFIG_ISCSI_TCP=m
 CONFIG_ISCSI_BOOT_SYSFS=m
 CONFIG_ATA=y
 CONFIG_SATA_AHCI=m
+CONFIG_SATA_MOBILE_LPM_POLICY=1
 CONFIG_SATA_AHCI_PLATFORM=m
 CONFIG_AHCI_DWC=m
 CONFIG_MD=y
