patches: overlays: `h616 disable uart`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/patches/overlays/arm64/sunxi-h616-disable-uart1.dts
+++ b/patches/overlays/arm64/sunxi-h616-disable-uart1.dts
@@ -3,9 +3,9 @@
 
 / {
 	fragment@0 {
-		target = <&uart2>;
+		target = <&uart1>;
 		__overlay__ {
-			status = "okay";
+			status = "disabled";
 		};
 	};
 };
