Linux defconfigs: `insert additional modules`
Example: kernel.txt
MODULES="CONFIG_RTC_DRV_PCF85063=m CONFIG_NVME_HWMON=y"

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/function/config
+++ b/lib/function/config
@@ -10,10 +10,10 @@ ENABLE_VFAT="false"
 # Root Filesystem Types: ext4 btrfs xfs
 FSTYPE="ext4"
 
-# UEFI Options
+# UEFI Options (WIP)
 ENABLE_EFI="false"
 
-# Petitboot (ODROID)
+# Petitboot (AML ODROID) (not recommended)
 ENABLE_PETITBOOT="false"
 
 # Image Size: 3584MB 4096MB
@@ -48,6 +48,9 @@ GIT_KERNELORG="true"
 # Patching
 #GIT_PATCHING="false"
 #GIT_PATCHDIR="patches/git/${BOARD}/${GIT_REPO}-${GIT_BRANCH}"
+
+# Enable additional modules
+#MODULES=""
 
 ### DO NOT EDIT BELOW THIS LINE
 KERNEL_PREFERENCES="$BUILDER"
