defconfig: meson64_defconfig: `CONFIG_SENSORS_DRIVETEMP=m`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -801,6 +801,7 @@ CONFIG_CHARGER_GPIO=m
 CONFIG_SENSORS_AXI_FAN_CONTROL=m
 CONFIG_SENSORS_ARM_SCPI=y
 CONFIG_SENSORS_ASPEED=m
+CONFIG_SENSORS_DRIVETEMP=m
 CONFIG_SENSORS_GL518SM=m
 CONFIG_SENSORS_GL520SM=m
 CONFIG_SENSORS_GPIO_FAN=y
