`Custom linux logo`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/function/config
+++ b/lib/function/config
@@ -52,6 +52,9 @@ GIT_KERNELORG="true"
 # Enable additional modules
 #MODULES=""
 
+# Custom linux logo
+LINUX_LOGO="linux_clut224.ppm"
+
 ### DO NOT EDIT BELOW THIS LINE
 KERNEL_PREFERENCES="$BUILDER"
 EOF
