sun50i-a64-pine64: mem dynamic freq scaling
disable by default

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/patches/overlays/arm64/Makefile
+++ b/patches/overlays/arm64/Makefile
@@ -48,6 +48,7 @@ dtbo-$(CONFIG_ARCH_MESON) += \
 	meson-usb-host-mode.dtbo
 
 dtbo-$(CONFIG_ARCH_SUNXI) += \
+	sunxi-a64-mbus-devfreq-driver.dtbo \
 	sunxi-a64-overclock.dtbo \
 	sunxi-h3-h5-ir-tx.dtbo \
 	sunxi-h3-h5-overclock.dtbo \
